--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,20 @@
-
+.holder{
+	display:flex;
+	
+}
+.item1{
+	height:100px;
+	width:100px;
+	background-color:green;
+}
+.item2{
+	height:100px;
+	width:100px;
+	background-color:red;
+}
+.item3{
+	height:100px;
+	width:100px;
+	background-color:blue;
+}
 /* Your CSS Code here. */
